[package]
name = "secure-mta"
version = "0.0.0"
authors = ["hyperfekt <adni.online@gmail.com>"]
edition = "2018"

[dependencies]
futures-preview = { git = "https://github.com/rust-lang-nursery/futures-rs" }
futures-util-preview = { git = "https://github.com/rust-lang-nursery/futures-rs" }
fahrenheit = { git = "https://github.com/hyperfekt/fahrenheit", branch = "alpha9" }